<?xml version="1.0"?>
<package format="3">
  <name>tb3_obstacle_avoidance</name>
  <version>0.2.0</version>
  <description>Reactive obstacle avoidance for TurtleBot3 with Gazebo worlds and SLAM launches.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>






